css/wypr.css
/* WYPR styles for header from old site (and to place logos) */

#wypr-header div#bluestripe {
  background: #009ddc;
  height: 20px;
  margin-bottom: 12px;
}

#wypr-header nav#tk p {
  margin: 0 !important;
  padding: 0 !important;
}

#wypr-header div#btyb {
  width: 985px;
  margin-left: -12.5px;
}

.dark_grey_small, .light_grey_small {
font-size: 10px;
line-height: 12px;
}

.light_grey_small, .light_grey_normal, .light_grey_large {
color: #939598;
}

.dark_grey_small, .dark_grey_normal, .dark_grey_large {
color: #4D4D4F;
}

#wypr-header div.content p {
  color: #4D4D4F;
  display: block;
  font-family: Helvetica, 'Nimbus Sans L', Arial, sans-serif;
  font-size: 14px;
  height: 36px;
  line-height: 18px;
  margin-bottom: 0px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
  width: 213px;
}

#wypr-header h2 a#wyprlogo,
#wypr-header h2 a#morninglogo {
  display: block;
  height: 36px;
  overflow: hidden;
  text-indent: -99999px;
}

#wypr-header h2 a#wyprlogo {
  background: url(i/wypr.png) left top no-repeat;
  width: 161px;
  height: 49px;
}

#wypr-header h2 a#morninglogo {
  background: url(i/mdmng.png) left top no-repeat;
  width: 239px;
}

/* WYPR custom stlyes for TLBU site */

/* GRID INFO */
.column, .columns, .one-half {
  float:left;
  margin: 0 12.5px;   
}

.one.column,
.one.columns     { width:  75px; }
.two.columns     { width: 175px; }
.three.columns   { width: 275px; }
.four.columns,
.one-half        { width: 375px; }
.five.columns    { width: 475px; }
.six.columns     { width: 575px; }
.seven.columns   { width: 675px; }
.eight.columns,
.fullwidth       { width: 775px; }

.clear           { clear: both; display: block; }
.left            { float: left; }
.right           { float: right; }

.add-top    { margin-top:    12.5px; }
.add-right  { margin-right:  12.5px; }
.add-bottom { margin-bottom: 12.5px; }
.add-left   { margin-left:   12.5px; }


/* COLOR INFO */
/*
Orange: rgba(232,124,66,1)    #E87C42
Brown:  rgba(121,109,105,1)   #796D69
Blue:   rgba(63,184,199,1)    #3FB8C7
Yellow: rgba(252,177,51,1)    #FCB133
*/

/*
==========================================
*/

#site-name,
#site-name a {
  display: block;
  height: 175px;
  width: 775px;
  }

#site-name a {
  background: url(i/tlbu-banner.png) center center no-repeat;
  overflow: hidden;
  text-indent: -999999px;
  }
  

/* Stripes across top of page */
h1#page-title {
}

#navigation {
  background: url(i/tlbustripes.png) left bottom no-repeat;
}

#navigation nav, 
#content_bottom .block.columns,
#footer {
  background: url(i/tlbustripes.png) left top no-repeat;
  padding-top: 12.5px;
}

  /* colorize stripe for main three sections... */
  .section-seeing-inequality #navigation, .section-seeing-inequality #navigation nav { background-position-x:  -775px; }
  .section-our-stories #navigation, .section-our-stories #navigation nav             { background-position-x: -1550px; }
  .section-your-stories #navigation, .section-your-stories #navigation nav           { background-position-x: -2325px; }

/* Get rid od basic page headers for "node-type-page" */
body.node-type-page #content > h1.title,
body.page-node-76 #content > h1.title,
body.page-contact #content > h1.title {display:none;}

/* Our Stories
==========================================*/
.section-our-stories h1#page-title {
  background-position-x: -1550px;
}

div.view-our-stories div.segment {
  border-bottom: 1px solid #796D69;
  padding: 25px 25px 25px 0;
}

.view-our-stories h2.post-title,
.view-our-stories h2.post-title a {
  color: #E87C42;
  margin: 0;
  text-decoration: none;
  }
  
div.airdate, 
div.airdate strong, 
div.airdate p {
  margin: 0;
}

div.airdate p {
  margin: 0 0 0 12.5px;
  display: inline-block;
}

div.teaser, 
div.teaser p {
  margin: 0;
}

/* Main Channel Page(s) styles */
.pagelisting {
  border-bottom: 1px solid #796D69;
  padding: 25px 0;
}

/* Twitter Block Styles
==========================================*/
.view-tweets {
  border: 1px solid #796D69;
  font-size: 13px;
  line-height: 15px;
  margin: 0;
  padding: 0;
}

.view-tweets .view-header {
  margin: 6px 2px 0px;
  padding: 0 0 4px;
  text-align: center;
  border-bottom: 1px solid #E9E9E9;
}

.view-tweets ul.tweets{
  list-style: none;
  margin: 0;
  padding: 6.25px;
}

.view-tweets ul.tweets li.tweet {
  border-bottom: 1px solid #E9E9E9;
  padding: 6.25px;
}

.view-tweets ul.tweets li.tweet:last-child {
  border-bottom: none;
}

.view-tweets ul.tweets li.tweet p {
  margin: 0;
}

.view-tweets ul.tweets li.tweet p.date {
  font-size: 11px;
  color: #999;
}

/* Frontpage Slideshow 
==========================================*/
div.region-glider div.glider,
div.region-glider div.glider .view, 
div.region-glider div.glider .view .view-content, 
div.region-glider div.glider .view .view-content .slide, 
div.region-glider div.glider .view .view-content .slide a, 
div.region-glider div.glider .view .view-content .slide a img {
  position: relative;
  height:250px;
  width:475px;
}
div.region-glider div.glider .view .view-content .slide h3.title,
div.region-glider div.glider .view .view-content .slide p {
  display: none;
  font-size: 95%;
  position: absolute;
  margin: 0;
  padding: 12.5px;
  width:175px;
  left:0;
  z-index: 9;
}
div.region-glider div.glider .view .view-content:hover .slide h3.title,
div.region-glider div.glider .view .view-content:hover .slide p {
  display: block;
}
div.region-glider div.glider .view .view-content .slide h3.title {
  background: rgba(121,109,105,.8);
  height:225px;
  top:0;
}
div.region-glider div.glider .view .view-content .slide p {
  color: white;
  font-size: 12px;
  line-height: 14px;
  height: 175px;
  overflow: hidden;
  top: 50px;
}
div.region-glider div.glider .view .view-content .slide p a {
  color: #DDD;
  text-decoration: underline;
}
#slidenav a {
  background: #3FB8C7;
  border: 2px solid white; 
  display: block;
  height:24px;
  width:24px;
  float:left;
  margin: 12.5px 12.5px 0 0;
  padding: 0;
  overflow: hidden;
  text-indent: -99999px;
  /**/
  border-radius: 13px;
  -moz-border-radius: 13px;
  -webkit-border-radius: 13px;
  -o-border-radius: 13px;
  -ms-border-radius: 13px;
}

#slidenav a.activeSlide {
  border: 2px solid #796D69; 
}

#slidenav a:hover {
  opacity: .66;
}

#slidenav a:first-child {
  background: #DF7846;
}

#slidenav a:last-child {
  background: #FCB133;
}

/* Funders FOOTER BLOCK */
div.funders ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

div.funders ul li.funder{
  display: block;
  float: left;
  list-style: none;
  margin: 0 25px 0 0;
  padding: 0;
  width: 135px;
}

div.funders ul li:last-child {
  margin: 0;
}

div.funders ul li.funder img, 
div.funders ul li.funder a {
  border: none;
  display: block;
  height: auto;
  margin: 0;
  padding: 0;
  width: 135px;
}

/* JPlayer Customization
==========================================*/
div.jp-audio {
	width:420px;
}

div.jp-audio, div.jp-type-single, div.jp-type-playlist {
	position: relative;
}


div.jp-interface {
	position: relative;
	background-color:#eee;
	/* width:418px; */
	width:100%;
	border:1px solid #796D69;
}

div.jp-audio div.jp-type-single div.jp-interface {
	height:50px;
	border-bottom:none;
}

div.jp-audio div.jp-type-playlist div.jp-interface {
	height:50px;
}

div.jp-video div.jp-type-single div.jp-interface {
	height:40px;
	border-bottom:none;
}

div.jp-video div.jp-type-playlist div.jp-interface {
	height:40px;
}

div.jp-audio div.jp-type-single a.jp-play,
div.jp-audio div.jp-type-single a.jp-pause,
div.jp-audio div.jp-type-playlist a.jp-play,
div.jp-audio div.jp-type-playlist a.jp-pause {
  top: 5px !important;
  left: 84px !important;
}

div.jp-audio div.jp-type-single a.jp-stop,
div.jp-audio div.jp-type-playlist a.jp-stop {
  top: 11px !important;
  left: 128px !important;
}

div.jp-audio div.jp-type-single div.jp-progress {
	top:17px;
	left:130px;
	width:122px;
	height:15px;
}

div.jp-audio div.jp-type-playlist div.jp-progress {
	top:17px;
	left:164px;
	width:122px;
	height:15px;
}

div.jp-audio div.jp-type-single a.jp-mute,
div.jp-audio div.jp-type-single a.jp-unmute {
	top:17px;
	left:274px;
}

div.jp-audio div.jp-type-playlist a.jp-mute,
div.jp-audio div.jp-type-playlist a.jp-unmute {
	top:17px;
	left:296px;
}

div.jp-volume-bar {
	position: absolute;
	overflow:hidden;
	width:46px;
	height:5px;
	cursor: pointer;
}

div.jp-audio div.jp-type-single div.jp-volume-bar {
	top:22px;
	left:302px;
}

div.jp-audio div.jp-type-playlist div.jp-volume-bar {
	top:22px;
	left:324px;
}

div.jp-volume-bar-value {
	width:0px;
	height:5px;
}

div.jp-current-time,
div.jp-duration {
	position: absolute;
	font-size:10px;
	font-style:oblique;
}

div.jp-duration {
	text-align: right;
}

div.jp-audio div.jp-type-single div.jp-current-time,
div.jp-audio div.jp-type-single div.jp-duration {
	top:34px;
	left:130px;
	width:122px;
}

div.jp-audio div.jp-type-playlist div.jp-current-time,
div.jp-audio div.jp-type-playlist div.jp-duration {
	top:34px;
	left:164px;
	width:122px;
}

div.jp-audio p#listen {
  font-size: 12px;
  font-style: italic;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 15.5px;
  left: 6px;
}

div.jp-type-playlist div.jp-playlist {
  background-color: #CCC;
  border: 1px solid #796D69;
  border-top: none;
  height: 25px;
  margin: 0;
  padding: 0;
  position: relative
/*
  position: absolute;
  top: 0;
  left: 400px;
  width: 110px;
*/
}

div.jp-type-playlist div.jp-playlist ul,
div.jp-type-playlist div.jp-playlist ul li,
div.jp-type-playlist div.jp-playlist li.jp-playlist-current {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
}

div.jp-type-playlist div.jp-playlist ul li a,
div.jp-type-playlist div.jp-playlist a.jp-playlist-current {
  display: block;
  background: url(i/icon-download.png) left center no-repeat;
  height: 25px;
  margin: 0;
  padding: 0;
  position: relative;
  overflow: hidden;
  text-indent: -999999px;
  width: 100%;
}

div.jp-type-playlist div.jp-playlist #instruct {
  font-size: 12px;
  font-style: italic;
  margin: 0;
  padding: 0;
  position: absolute;
  top: 5px;
  left: 110px;
}

